# eliot

./: .cvsignore  .gitignore  AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  NEWS  README  THANKS  TODO  acinclude.m4  aclocal.m4  bootstrap  config.h.in  configure.ac  configure.in
dic/: .cvsignore  Makefile.am  alist.c  alist.h  automaton.c  automaton.cpp  automaton.h  base_exception.cpp  base_exception.h  compdic.c  compdic.cpp  compdic.h  compdicmain.cpp  csv_helper.cpp  csv_helper.h  debug.h  dic.c  dic.cpp  dic.h  dic_exception.cpp  dic_exception.h  dic_internals.h  dic_search.c  dic_search.cpp  dic_search.h  encoding.cpp  encoding.h  er.l  er.y  erl.l  erl.lpp  ery.y  ery.ypp  grammar.cpp  grammar.h  hashtable.c  hashtable.cpp  hashtable.h  hashtable.i  header.cpp  (+15 more)
doc/: .cvsignore  Doxyfile  Makefile  dawg.fig  dawg.html  dic.txt  programming.tex  regexp.tex
extras/: Makefile.am  eliot.desktop  eliot.suppr
extras/contrib/: Makefile  apr-force-large-files-support.patch  arabica-no-example.patch  libconfig++-static-build.patch  log4cxx-build-fixes.patch  log4cxx-no-example.patch  log4cxx-pkg-config.patch
extras/debian/: changelog  control  copyright  rules
extras/innosetup/: eliot-setup.iss.in
extras/macosx/: Info.plist  eliot-64.icns
extras/reports/: README.txt  eliot.py  sigles.py  stats.css  stats.py  stats.tmpl
game/: Makefile.am  ai_percent.cpp  ai_percent.h  ai_player.h  arbitration.cpp  arbitration.h  bag.c  bag.cpp  bag.h  board.c  board.cpp  board.h  board_cross.c  board_cross.cpp  board_internals.h  board_layout.cpp  board_layout.h  board_search.c  board_search.cpp  board_search.h  command.cpp  command.h  coord.cpp  coord.h  cross.cpp  cross.h  debug.h  duplicate.cpp  duplicate.h  encoding.cpp  encoding.h  freegame.cpp  freegame.h  game.c  game.cpp  game.h  game_exception.cpp  game_exception.h  game_factory.cpp  game_factory.h  (+69 more)
game/cmd/: game_move_cmd.cpp  game_move_cmd.h  game_rack_cmd.cpp  game_rack_cmd.h  master_move_cmd.cpp  master_move_cmd.h  player_event_cmd.cpp  player_event_cmd.h  player_move_cmd.cpp  player_move_cmd.h  player_rack_cmd.cpp  player_rack_cmd.h  topping_move_cmd.cpp  topping_move_cmd.h
m4/: .cvsignore  ax_boost_base.m4  ax_lib_expat.m4
po/: .cvsignore  LINGUAS  Makevars  POTFILES.in  ca.po  cs.po  eliot.pot  en.po  es.po  fr.po  gl.po  id.po  it.po  makefile-qt4.patch  rs.po  sr.po
qt/: .cvsignore  Makefile.am  arbit_assignments.cpp  arbit_assignments.h  arbitration_widget.cpp  arbitration_widget.h  aux_window.cpp  aux_window.h  bag_widget.cpp  bag_widget.h  bag_widget2.cpp  bag_widget2.h  board_widget.cpp  board_widget.h  coord_model.cpp  coord_model.h  custom_popup.cpp  custom_popup.h  dic_tools_widget.cpp  dic_tools_widget.h  dic_wizard.cpp  dic_wizard.h  eliot.qrc  fav_players.cpp  fav_players.h  fav_players_dialog.cpp  fav_players_dialog.h  game_signals.cpp  game_signals.h  hints_dialog.cpp  hints_dialog.h  history_widget.cpp  history_widget.h  main.cpp  main_window.cpp  main_window.h  misc_helpers.cpp  misc_helpers.h  new_game.cpp  new_game.h  (+34 more)
qt/images/: eliot.xpm  prev.xpm  replay.xpm
qt/ui/: arbit_assignments.ui  arbitration_widget.ui  bag_widget.ui  dic_tools_widget.ui  dic_wizard_conclusion_page.ui  dic_wizard_info_page.ui  dic_wizard_letters_def_page.ui  fav_players_dialog.ui  main_window.ui  new_game.ui  player_widget.ui  prefs_dialog.ui  tables_dialog.ui  topping_widget.ui  training_widget.ui
test/: .cvsignore  arbitration_load_save.input  arbitration_load_save.ref  driver  duplicate_1_player.input  duplicate_1_player.ref  duplicate_2_ai.input  duplicate_2_ai.ref  duplicate_7among8_variant.ref  duplicate_explosive_variant.input  duplicate_explosive_variant.ref  duplicate_humans_ai.input  duplicate_humans_ai.ref  duplicate_invalid_turn.input  duplicate_invalid_turn.ref  duplicate_joker_variant.ref  duplicate_load_save.input  duplicate_load_save.ref  duplicate_navigation.input  duplicate_navigation.ref  duplicate_no_point.input  duplicate_no_point.ref  freegame_3_ai.input  freegame_3_ai.ref  freegame_7among8_variant.input  freegame_7among8_variant.ref  freegame_change.input  freegame_change.ref  freegame_explosive_variant.input  freegame_explosive_variant.ref  freegame_joker_variant.input  freegame_joker_variant.ref  freegame_load_save.input  freegame_load_save.ref  freegame_navigation.input  freegame_navigation.ref  freegame_passing.input  freegame_passing.ref  freegame_play.ref  fumee  (+51 more)
test/arbitration/: load_save.input  load_save.ref
test/duplicate/: 1_player.ref  2_ai.ref  7among8_variant.input  7among8_variant.ref  explosive_variant.ref  humans_ai.ref  invalid_turn.input  invalid_turn.ref  joker_variant.input  joker_variant.ref  load_save.input  load_save.ref  navigation.ref  no_point.ref
test/freegame/: 3_ai.input  3_ai.ref  7among8_variant.ref  change.input  change.ref  explosive_variant.ref  joker_variant.ref  load_save.ref  navigation.ref  passing.ref  passing_3_times.input  passing_3_times.ref  play.input  play.ref
test/training/: 7among8_variant.input  7among8_variant.ref  7pl1.ref  bag.ref  benj.input  benj.ref  cross.ref  cross3.ref  dict.input  dict.ref  explosive_variant.input  joker_variant.ref  load_save.input  load_save.ref  navigation.input  navigation.ref  racc.ref  rosace.ref  search.input  search.ref
test/various/: load_combi_variants.input  load_combi_variants.ref  regexp.input
utils/: .cvsignore  Makefile.am  curses_intf.cpp  curses_intf.h  eliottxt.c  eliottxt.cpp  game_io.cpp  game_io.h  ncurses.cpp  ncurses.h
wxwin/: .cvsignore  Makefile.am  auxframes.cc  auxframes.h  confdimdlg.cc  confdimdlg.h  configdb.cc  configdb.h  confsearch.cc  confsearch.h  ewx.h  gfxboard.cc  gfxboard.h  gfxresult.cc  gfxresult.h  main.cc  mainframe.cc  mainframe.h  printout.cc  printout.h  searchpanel.cc  searchpanel.h
