# Eliot
# Copyright (C) 1999-2007  Antoine Fraboulet & Olivier Teulière
# Authors: Antoine Fraboulet <antoine.fraboulet@free.fr>
#          Olivier Teulière <ipkiss @@ gmail.com>
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA

noinst_LIBRARIES = libdic.a

localedir = $(datadir)/locale
AM_CPPFLAGS = -DLOCALEDIR=\"$(localedir)\" -I$(top_srcdir) -I../intl -I$(top_srcdir)/intl $(INCICONV)

libdic_a_CFLAGS=
libdic_a_YFLAGS=-d
libdic_a_LFLAGS=
libdic_a_SOURCES = \
	erl.lpp \
	ery.ypp \
	dic_exception.cpp dic_exception.h \
	header.cpp header.h \
	dic_internals.h \
	tile.cpp tile.h \
	dic.cpp dic.h \
	dic_search.cpp \
	encoding.cpp encoding.h \
	automaton.cpp automaton.h \
	regexp.cpp regexp.h

BUILT_SOURCES= 			\
	libdic_a-erl.cpp 	\
	libdic_a-erl.h 		\
	libdic_a-ery.cpp 	\
	libdic_a-ery.h


nodist_libdic_a_SOURCES=	\
	libdic_a-erl.cpp 	\
	libdic_a-erl.h 		\
	libdic_a-ery.cpp	\
	libdic_a-ery.h

# This hook triggers on 'make dist' (and 'make distcheck')
# XXX: In fact, the recommended behaviour is:
#  - list only libdic_a-ery.h in BUILT_SOURCES,
#  - do not die with an error in configure.in if flex or bison is not found
#  - do not have any dist-hook trigger
# The result is that the generated files are kept in the tarball generated with make dist,
# with still an error message for developers when the ypp or lpp file has been modified
# and bison or flex is not found.
# The problem is that, even though Automake is aware of the header generated by bison,
# it seems to have problems with the one generated by flex...
dist-hook:
	-for file in $(BUILT_SOURCES) ; do rm -f $(distdir)/$$file ; done

CLEANFILES= \
	libdic_a-erl.cpp \
	libdic_a-erl.h \
	libdic_a-ery.cpp \
	libdic_a-ery.h


## automake workaround to generate .h file 
libdic_a-erl.h: erl.lpp
	${LEX} ${srcdir}/erl.lpp

#####################################
if BUILD_DICTOOLS

bin_PROGRAMS = \
	compdic \
	listdic \
	regexp

compdic_SOURCES=compdic.cpp \
	hashtable.h hashtable.cpp hashtable.i
compdic_CPPFLAGS=$(AM_CPPFLAGS) @BOOST_CPPFLAGS@
compdic_LDADD=libdic.a @LIBINTL@

listdic_SOURCES=listdic.cpp
listdic_LDADD=libdic.a @LIBINTL@

#regexp_CFLAGS=-DDEBUG_RE
regexp_SOURCES=regexpmain.cpp
regexp_LDADD=libdic.a @LIBINTL@

endif

