# Eliot
# Copyright (C) 1999  Antoine Fraboulet
# antoine.fraboulet@free.fr
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA

# $Id: Makefile.am,v 1.2 2004/08/07 18:10:42 ipkiss Exp $

noinst_LIBRARIES = libgame.a

INCLUDES = -I$(top_srcdir)/dic

libgame_a_SOURCES = 		\
	tiles.c tiles.h		\
	bag.c bag.h		\
	board.c board.h		\
	board_cross.c		\
	board_search.c		\
	game.c game.h		\
	gameio.c gameio.h	\
	player.c player.h	\
	pldrack.c pldrack.h	\
	rack.c rack.h		\
	results.c results.h	\
	round.c round.h		\
	gamestruct.h


