# Eliot
# Copyright (C) 1999  Antoine Fraboulet
# antoine.fraboulet@free.fr
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA

noinst_LIBRARIES = libgame.a

INCLUDES = -I$(top_srcdir)/dic

libgame_a_SOURCES = 		\
	ai_percent.cpp ai_percent.h	\
	ai_player.h				\
	tile.cpp tile.h			\
	bag.cpp bag.h			\
	coord.cpp coord.h		\
	cross.cpp cross.h		\
	board.cpp board.h		\
	board_cross.cpp			\
	board_search.cpp		\
	duplicate.cpp duplicate.h	\
	freegame.cpp freegame.h	\
	game.cpp game.h			\
	game_factory.cpp game_factory.h	\
	player.cpp player.h		\
	pldrack.cpp pldrack.h	\
	rack.cpp rack.h			\
	results.cpp results.h	\
	round.cpp round.h		\
	training.cpp training.h	\
	turn.cpp turn.h

